--- a/src/index.html
+++ b/src/index.html
@@ -14,39 +14,69 @@
   </head>
   <body>
     <main class="main">
-      <div class="calendar calendar--month-length-31 calendar--start-day-sun">
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-        <ul class="calendar__day"></ul>
-      </div>
+      <ul class="calendar calendar--month-length-31 calendar--start-day-sun">
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+
+        <li class="calendar__day"></li>
+      </ul>
     </main>
   </body>
 </html>
