--- a/src/index.html
+++ b/src/index.html
@@ -14,39 +14,37 @@
   </head>
   <body>
     <div class="calendar">
-      <div class="days__field">
-        <div class="day day__1"></div>
-        <div class="day day__2"></div>
-        <div class="day day__3"></div>
-        <div class="day day__4"></div>
-        <div class="day day__5"></div>
-        <div class="day day__6"></div>
-        <div class="day day__7"></div>
-        <div class="day day__8"></div>
-        <div class="day day__9"></div>
-        <div class="day day__10"></div>
-        <div class="day day__11"></div>
-        <div class="day day__12"></div>
-        <div class="day day__13"></div>
-        <div class="day day__14"></div>
-        <div class="day day__15"></div>
-        <div class="day day__16"></div>
-        <div class="day day__17"></div>
-        <div class="day day__18"></div>
-        <div class="day day__19"></div>
-        <div class="day day__20"></div>
-        <div class="day day__21"></div>
-        <div class="day day__22"></div>
-        <div class="day day__23"></div>
-        <div class="day day__24"></div>
-        <div class="day day__25"></div>
-        <div class="day day__26"></div>
-        <div class="day day__27"></div>
-        <div class="day day__28"></div>
-        <div class="day day__29"></div>
-        <div class="day day__30"></div>
-        <div class="day day__31"></div>
-      </div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
