add task "calendar"

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="calendar calendar--start-sun">
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div
         class="calendar__day"
         data-day="1"
