--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <ul class="calendar">
+    <ul class="calendar calendar--start-day-sun calendar--month-length-31">
       <li class="calendar__day calendar__day--1"></li>
       <li class="calendar__day calendar__day--2"></li>
       <li class="calendar__day calendar__day--3"></li>
