--- a/src/index.html
+++ b/src/index.html
@@ -15,4 +15,37 @@
   <body>
     <h1>Calendar</h1>
   </body>
+  <div class="calendar calendar--start-day-sun calendar--month-length-31">
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+    <div class="calendar__day"></div>
+  </div>
 </html>
