--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Calendar</title>
-    <link rel="stylesheet" href="styles/index.scss" />
+    <link
+      rel="stylesheet"
+      href="styles/index.scss"
+    />
   </head>
   <body>
     <h1>Calendar</h1>
