--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/main.scss"
+      href="styles/index.scss"
     />
   </head>
   <body class="page__body">
