--- a/src/index.html
+++ b/src/index.html
@@ -4,41 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendar</title>
-    <link rel="stylesheet" href="styles/main.scss" />
+    <link rel="stylesheet" href="style.scss" />
   </head>
   <body>
     <div class="calendar calendar--month-length-31 calendar--start-day-sun">
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
-      <div class="calendar__item"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
