--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="calendar calendar--start-day-sun calendar--month-length-31">
+      <!-- the number of days hard-coded in the calendar according to the task -->
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
