--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
   <body>
     <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <!-- the number of days hard-coded in the calendar according to the task -->
+      <!-- The assignment specifies not to use JavaScript.
+      Emmet was used to generate elements -->
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
