--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
+      href="/dist/index.e378193d.css">
+    <link
+      rel="stylesheet"
       href="styles/index.scss"
     />
   </head>
