--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
     <link
       rel="stylesheet"
-      href="styles/style.scss"
+      href="styles/style.css"
     />
   </head>
   <body class="page">
