--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/main.scss"
+      href="styles/main.css"
     />
   </head>
   <!-- #endregion -->
