--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Calendar</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
-    <script type="module"
-            src="./scripts/main.js"></script>
+    <script
+      type="module"
+      src="./scripts/main.js"
+    ></script>
   </head>
   <body>
-    <h1 class="calendar__title">Calendar</h1>
-    <div class="calendar calendar--start-day-sun calendar--month-length-31">
-
-
-    </div>
+    <main>
+      <div
+        class="calendar calendar--start-day-sun calendar--month-length-31"
+      ></div>
+    </main>
   </body>
 </html>
