refactor: refactor AI comments

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Календарь</title>
+    <title>Calendar</title>
     <link
       rel="stylesheet"
       href="styles/index.scss"
@@ -17,15 +17,6 @@
       class="calendar calendar--start-day-sun calendar--month-length-31"
     ></div>
 
-    <script>
-      (() => {
-        let template = '';
-        for (let i = 0; i < 31; i++) {
-          template += '<div class="calendar__day"></div>';
-        }
-
-        document.querySelector('.calendar').innerHTML = template;
-      })();
-    </script>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
