--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       href="styles/index.scss"
     />
   </head>
-  <body class="body">
+  <body class="page__body">
     <section class="calendar calendar--start-day-sun calendar--month-length-31">
       <a
         href="#"
