--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,7 @@
       href="styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Calendar</h1>
+  <body class="body">
     <div class="calendar">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
