--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="./styles/index.scss"
+      href="styles/index.scss"
     />
   </head>
   <body class="page__body">
