--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/style.scss"
+      href="styles/style.css"
     />
   </head>
   <body class="page">
