after code review

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/main.scss"
+      href="styles/main.css"
     />
   </head>
   <body>
     <div class="calendars-container">
-      <div class="calendar calendar--start-day-sun calendar--month-lenght-31">
+      <div class="calendar calendar--start-day-sun calendar--month-lengh-31">
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
@@ -47,7 +47,7 @@
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
       </div>
-      <div class="calendar calendar--start-day-sun calendar--month-lenght-29">
+      <div class="calendar calendar--start-day-sun calendar--month-lengh-29">
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
