--- a/src/index.html
+++ b/src/index.html
@@ -1,47 +1,51 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Calendar</title>
+    <link
+      rel="stylesheet"
+      href="styles/index.scss"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Calendar</title>
-  <link rel="stylesheet" href="styles/index.scss" />
-</head>
-
-<body>
-  <div class="calendar calendar--start-day-sun calendar--month-length-31">
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-  </div>
-</body>
-
+  <body>
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+    </div>
+  </body>
 </html>
