add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,40 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <main class="calendar">
+      <div
+        class="day calendar__day1 day--mon day--tue day--wed day--thu day--fri day--sat day--sun"
+      ></div>
+      <div class="day calendar__day2"></div>
+      <div class="day calendar__day3"></div>
+      <div class="day calendar__day4"></div>
+      <div class="day calendar__day5"></div>
+      <div class="day calendar__day6"></div>
+      <div class="day calendar__day7"></div>
+      <div class="day calendar__day8"></div>
+      <div class="day calendar__day9"></div>
+      <div class="day calendar__day10"></div>
+      <div class="day calendar__day11"></div>
+      <div class="day calendar__day12"></div>
+      <div class="day calendar__day13"></div>
+      <div class="day calendar__day14"></div>
+      <div class="day calendar__day15"></div>
+      <div class="day calendar__day16"></div>
+      <div class="day calendar__day17"></div>
+      <div class="day calendar__day18"></div>
+      <div class="day calendar__day19"></div>
+      <div class="day calendar__day20"></div>
+      <div class="day calendar__day21"></div>
+      <div class="day calendar__day22"></div>
+      <div class="day calendar__day23"></div>
+      <div class="day calendar__day24"></div>
+      <div class="day calendar__day25"></div>
+      <div class="day calendar__day26"></div>
+      <div class="day calendar__day27"></div>
+      <div class="day calendar__day28 day__month--length"></div>
+      <div class="day calendar__day29 day__month--length"></div>
+      <div class="day calendar__day30 day__month--length"></div>
+      <div class="day calendar__day31 day__month--length"></div>
+    </main>
   </body>
 </html>
