--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,42 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="styles/main.scss"
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <main class="calendar calendar--month-length-31 calendar--start-day-sun">
+      <div class="page-1 calendar__day"></div>
+      <div class="page-2 calendar__day"></div>
+      <div class="page-3 calendar__day"></div>
+      <div class="page-4 calendar__day"></div>
+      <div class="page-5 calendar__day"></div>
+      <div class="page-6 calendar__day"></div>
+      <div class="page-7 calendar__day"></div>
+      <div class="page-8 calendar__day"></div>
+      <div class="page-9 calendar__day"></div>
+      <div class="page-10 calendar__day"></div>
+      <div class="page-11 calendar__day"></div>
+      <div class="page-12 calendar__day"></div>
+      <div class="page-13 calendar__day"></div>
+      <div class="page-14 calendar__day"></div>
+      <div class="page-15 calendar__day"></div>
+      <div class="page-16 calendar__day"></div>
+      <div class="page-17 calendar__day"></div>
+      <div class="page-18 calendar__day"></div>
+      <div class="page-19 calendar__day"></div>
+      <div class="page-20 calendar__day"></div>
+      <div class="page-21 calendar__day"></div>
+      <div class="page-22 calendar__day"></div>
+      <div class="page-23 calendar__day"></div>
+      <div class="page-24 calendar__day"></div>
+      <div class="page-25 calendar__day"></div>
+      <div class="page-26 calendar__day"></div>
+      <div class="page-27 calendar__day"></div>
+      <div class="page-28 calendar__day"></div>
+      <div class="page-29 calendar__day"></div>
+      <div class="page-30 calendar__day"></div>
+      <div class="page-31 calendar__day"></div>
+    </main>
   </body>
 </html>
