add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/index.scss"
     />
   </head>
-  <body>
-    <div class="calendar calendar--month-lenght-31 calendar--start-day-sun">
+  <body class="body">
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
