--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,39 @@
   </head>
   <body>
     <h1>Calendar</h1>
+    <div class="calendar calendar--start-sunday calendar--month-length-31">
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+      <div class="calendar__day calendar__day--start-monday"></div>
+    </div>
   </body>
 </html>
