--- a/src/index.html
+++ b/src/index.html
@@ -9,44 +9,54 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="./styles/index.scss"
     />
   </head>
+
   <body>
-    <h1>Calendar</h1>
-    <div class="calendar calendar--start-sunday calendar--month-length-31">
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
-      <div class="calendar__day calendar__day--start-monday"></div>
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
