--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,44 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="styles/main.scss"
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <!-- <div class="container"> -->
+    <div class="calendar calendar--start-day--wed calendar--month-length--31">
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+    </div>
+    <!-- </div> -->
   </body>
 </html>
