--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
   </head>
 
   <body>
-    <h1>Calendar</h1>
-    <div class="calendar calendar--start-sun calendar--month-31">
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__day calendar__day--first-day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
