add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,11 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="styles/main.scss"
     />
   </head>
   <body>
-    <container
-      class="calendar calendar--start-day-sun calendar--month-length-31"
-    >
+    <section class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
@@ -47,6 +45,6 @@
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
-    </container>
+    </section>
   </body>
 </html>
