--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,7 @@
     />
   </head>
   <body>
-    <div class="calendar calendar--start-day-sun calendar--month-length-29
-    ">
+    <div class="calendar calendar--start-day-sun calendar--month-length-29">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
