add better solution

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="./styles/blocks/index.scss"
+      href="./styles/main.scss"
     />
   </head>
   <body>
-    <div class="calendar">
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
