--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./styles/index.scss" />
 </head>
   <body>
-    <main class="calendar calendar--start-day-sun">
+    <main class="calendar month-length month-length--start-day">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
