--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     />
   </head>
   <body class="page__body">
-    <ul class="calendar calendar--start-sun calendar--length-30">
+    <ul class="calendar calendar--start-day-sun calendar--month-length-31">
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
