--- a/src/index.html
+++ b/src/index.html
@@ -9,42 +9,42 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="styles/main.scss"
     />
   </head>
   <body>
     <div class="calendar calendar--month-length-31 calendar--start-sun">
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
