--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/main.scss"
+      href="styles/index.scss"
+    />
+    <link
+      rel="stylesheet"
+      href="styles/main.css"
     />
   </head>
   <body>
