--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,48 @@
   </head>
   <body>
     <h1>Calendar</h1>
+    <div class="calendar calendar--start-sun calendar--month-length-31">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+
+      <!-- <div class="calendar__days">
+        <div class="calendar__day start-day">Monday</div>
+        <div class="calendar__day start-day">Tuesday</div>
+        <div class="calendar__day start-day">Wednesday</div>
+        <div class="calendar__day start-day">Thursday</div>
+        <div class="calendar__day start-day">Friday</div>
+        <div class="calendar__day start-day">Saturday</div>
+        <div class="calendar__day start-day">Sunday</div>
+      </div> -->
+    </div>
   </body>
 </html>
