--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <title>Interactive Calendar</title>
     <link
       rel="stylesheet"
-      href="./styles/index.css"
+      href="./styles/main.css"
     />
-    <title>Interactive Calendar</title>
   </head>
   <body>
     <div class="calendar calendar--start-day-mon calendar--month-length-31">
