add first commit #1

--- a/src/index copy.html
+++ b/src/index copy.html
@@ -19,7 +19,8 @@
   </head>
   <!-- #endregion region header -->
   <body>
-    <div class="calendar calendar--month-length-31 calendar--start-day-sun">
+    <div class="calendar calendar--month-length calendar--start-day-mon">
+      <!-- 31 днів, але цифри генеруються через CSS -->
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
