fix smol problems #2

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     />
     <link
       rel="stylesheet"
-      href="style.scss"
+      href="style.css"
     />
   </head>
   <!-- #endregion region header -->
