--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,10 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="styles/main.scss"
     />
   </head>
-  <body data-qa="calendar-body">
-    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+    <div class="calendar calendar--month-length-31 calendar--start-day-sun">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
@@ -45,6 +44,5 @@
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
-    </div>
   </body>
 </html>
