add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,38 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar--sat">
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+      <div class="calendar__box"></div>
+    </div>
   </body>
 </html>
