--- a/src/index.html
+++ b/src/index.html
@@ -14,37 +14,37 @@
   </head>
   <body>
     <div class="calendar calendar--sat">
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
-      <div class="calendar__box"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
