--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="styles/main.scss"
     />
   </head>
   <body>
-    <div class="calendar calendar--sat">
+    <div class="calendar calendar--sun">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
