--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,10 @@
       href="styles/main.scss"
     />
   </head>
-  <body>
-    <div class="calendar calendar--sun">
+  <body class="page">
+    <div
+      class="page__calendar calendar calendar--month-length-31 calendar--start-day-sun"
+    >
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
