--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,235 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+      <div
+        class="calendar__day"
+        aria-label="day"
+      ></div>
+
+      <!-- 31 элементов календаря -->
+
+      <!-- Сами числа добавляются через ::before в CSS -->
+    </div>
   </body>
 </html>
