add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en"
+<html
+  lang="en"
   class="page"
 >
   <head>
@@ -15,9 +16,7 @@
     />
   </head>
   <body class="page__body">
-    <div
-      class="calendar page__calendar calendar--start-day-sun calendar--month-length-31"
-    >
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
